弃用JVM参数